# QuillForge

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_zh-CN.md  ROADMAP.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/dicts/: en-basic.txt
src-tauri/src/: commands.rs  crypto.rs  lib.rs  main.rs
src-tauri/src/commands/: ai.rs  books.rs  helpers.rs  history.rs  keys.rs  mod.rs  search.rs  spell.rs
src-tauri/src/llm/: anthropic.rs  mod.rs  ollama.rs  openai.rs  openai_compat.rs  provider.rs
src/commands/: ai.ts  history.ts  index.ts  keys.ts  llm.ts  search.ts  spell.ts  storage.ts
src/components/ai/: AiLoadingState.vue  AiPanel.vue  ConsistencyResult.vue  ContinueResult.vue  GenChapterResult.vue  IdeaResult.vue  ReviewResult.vue  RewriteResult.vue  TemplateSelector.vue
src/components/analytics/: AnalyticsPanel.vue
src/components/common/: AppLayout.vue  CreateBookDialog.vue  LoadingDots.vue  ModalDialog.vue  OutlineDialog.vue  SearchDialog.vue  TitleBar.vue
src/components/editor/: BookSettingsPanel.vue  BookSidebar.vue  BubbleMenu.vue  ChapterHistory.vue  CharacterPanel.vue  EditorToolbar.vue  NovelEditor.vue
src/components/settings/: ApiKeyInput.vue  ProviderCard.vue  SettingsDialog.vue
src/extensions/: ghost-text.ts  spellcheck.ts
src/i18n/locales/: en-US.ts  zh-CN.ts
src/stores/: book.ts  editor.ts  i18n.ts  settings.ts  templates.ts  theme.ts
src/types/: index.ts
