[package]
name = "quillforge"
version = "1.1.0"
edition = "2021"
authors = ["oxroot", "Claude"]
license = "MIT"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
base64 = "0.22"
rand = "0.8"
aes-gcm = "0.10"
chrono = { version = "0.4", features = ["serde"] }
unicode-segmentation = "1.12"
aho-corasick = "1.1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "quillforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
